[gd_scene load_steps=14 format=3 uid="uid://ciainjckbydh6"]

[ext_resource type="PackedScene" uid="uid://brs2sw2ur3ono" path="res://scenes/paddle.tscn" id="1_80nbo"]
[ext_resource type="Script" uid="uid://c1drmpkx684pf" path="res://scenes/game.gd" id="1_e2o6t"]
[ext_resource type="Script" uid="uid://bvsbduwgjautw" path="res://scripts/camera.gd" id="2_p57ef"]
[ext_resource type="Texture2D" uid="uid://b7muxsh44ds8q" path="res://assets/environment_forestbackground1-1.png" id="2_u5sy4"]
[ext_resource type="PackedScene" uid="uid://bgiangnsirj2e" path="res://scenes/ball.tscn" id="3_feb5d"]
[ext_resource type="Texture2D" uid="uid://5niass0etbi8" path="res://assets/JWDLx5AZBtI.jpg" id="3_gee14"]
[ext_resource type="PackedScene" uid="uid://b15p7yuctuchq" path="res://helpers/debug/DebugOverlay.tscn" id="4_fc0e3"]
[ext_resource type="PackedScene" uid="uid://cmyiargfvngqo" path="res://scenes/hud.tscn" id="5_iywne"]
[ext_resource type="Shader" uid="uid://dx6m4xthol0au" path="res://scenes/deform.gdshader" id="6_0tnpc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0tnpc"]
shader = ExtResource("6_0tnpc")
shader_parameter/x_factor = 1.0
shader_parameter/bulge = 0.0
shader_parameter/color = Color(0, 0, 0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vtaks"]
shader = ExtResource("6_0tnpc")
shader_parameter/x_factor = 1.0
shader_parameter/bulge = 0.0
shader_parameter/color = Color(0, 0, 0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_feb5d"]
size = Vector2(20, 652)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fc0e3"]
size = Vector2(20, 1152)

[node name="Game" type="Node2D"]
script = ExtResource("1_e2o6t")

[node name="backgrounds" type="Node2D" parent="."]

[node name="background1" type="Sprite2D" parent="backgrounds"]
position = Vector2(23.0391, 106)
scale = Vector2(1.40625, 1.40625)
texture = ExtResource("2_u5sy4")

[node name="background2" type="Sprite2D" parent="backgrounds"]
visible = false
position = Vector2(11, 35)
scale = Vector2(1.1168, 1.1168)
texture = ExtResource("3_gee14")

[node name="camera" type="Camera2D" parent="."]
script = ExtResource("2_p57ef")

[node name="Player1" parent="." instance=ExtResource("1_80nbo")]
material = SubResource("ShaderMaterial_0tnpc")
position = Vector2(-550, 0)
rotation = 1.5708

[node name="Player2" parent="." instance=ExtResource("1_80nbo")]
material = SubResource("ShaderMaterial_vtaks")
position = Vector2(550, 0)
rotation = 1.5708
player_type = 1

[node name="leftCollider" type="StaticBody2D" parent="." groups=["left"]]

[node name="left" type="CollisionShape2D" parent="leftCollider"]
unique_name_in_owner = true
position = Vector2(-586, 0)
shape = SubResource("RectangleShape2D_feb5d")

[node name="rightCollider" type="StaticBody2D" parent="." groups=["right"]]

[node name="right" type="CollisionShape2D" parent="rightCollider"]
position = Vector2(586, 0)
shape = SubResource("RectangleShape2D_feb5d")

[node name="boundary" type="StaticBody2D" parent="."]

[node name="top" type="CollisionShape2D" parent="boundary"]
position = Vector2(0, -334)
rotation = 1.5708
shape = SubResource("RectangleShape2D_fc0e3")

[node name="bottom" type="CollisionShape2D" parent="boundary"]
position = Vector2(0, 334)
rotation = 1.5708
shape = SubResource("RectangleShape2D_fc0e3")

[node name="ball" parent="." instance=ExtResource("3_feb5d")]
scale = Vector2(0.2, 0.2)

[node name="DebugOverlay" parent="." instance=ExtResource("4_fc0e3")]
offset_left = -566.0
offset_top = -312.0
offset_right = -546.0
offset_bottom = -292.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="score" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -26.0
offset_right = 26.0
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 6
size_flags_vertical = 2
text = "0 : 0"

[node name="hud" parent="." instance=ExtResource("5_iywne")]
metadata/_edit_use_anchors_ = true

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
position = Vector2(1031, -313)
color = Color(0.5540063, 0.5033022, 0.108822346, 1)
max_distance = 0.0

[connection signal="touched_wall" from="ball" to="." method="_on_ball_touched_wall"]
